# J2534_cffi

./: .gitignore  .pylintrc  README.md  build.ps1  clean.ps1  pyproject.toml  setup.cfg  setup.py
J2534_cffi/: __init__.py  defines.py  dll.py  registry.py
j2534_cffi/: __init__.py  defines.py  dll.py  header.py  registry.py
jc/: defines.py
test/: test_tactrix.py
