[metadata]
name = j2534_cffi
version = 1.0.0
author = Ryan Hope
author_email = ryan.hope@mcuinnovations.com
description = Python wrapper for J2534 DLLs using cffi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MCU-Innovations/j2534_cffi

[options]
packages = find:
install_requires =
    cffi

[options.packages.find]
exclude =
    tests*